; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_lock.c_linux_down_write_killable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linuxkpi/common/src/extr_linux_lock.c_linux_down_write_killable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rw_semaphore = type { i32 }

@current = common dso_local global i32 0, align 4
@EINTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_down_write_killable(%struct.rw_semaphore* %0) #0 {
  %2 = alloca %struct.rw_semaphore*, align 8
  %3 = alloca i32, align 4
  store %struct.rw_semaphore* %0, %struct.rw_semaphore** %2, align 8
  %4 = load %struct.rw_semaphore*, %struct.rw_semaphore** %2, align 8
  %5 = getelementptr inbounds %struct.rw_semaphore, %struct.rw_semaphore* %4, i32 0, i32 0
  %6 = call i32 @sx_xlock_sig(i32* %5)
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @current, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @linux_schedule_save_interrupt_value(i32 %11, i32 %12)
  %14 = load i32, i32* @EINTR, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %10, %1
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @sx_xlock_sig(i32*) #1

declare dso_local i32 @linux_schedule_save_interrupt_value(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
